<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
             >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin" >

                <LinearLayout
                    android:id="@+id/llRegisterSocial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:gravity="center" >

                    <ImageButton
                        android:id="@+id/btnRegisterFb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:background="@null"
                        android:src="@drawable/btn_facebook"
                        android:visibility="gone"/>

                    <ImageButton
                        android:id="@+id/btnRegisterGplus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:src="@drawable/btn_google"
                        android:visibility="gone"/>
                </LinearLayout>

                <!-- <include layout="@layout/ub__view" /> -->

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@null"
                    android:src="@drawable/or"
                    android:visibility="gone"/>

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/ivRegisterProfile"
                    android:layout_width="@dimen/menu_img_width"
                    android:layout_height="@dimen/menu_img_height"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:src="@drawable/user"
                    app:border_color="@color/white"
                    app:border_width="3dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin" >

                    <com.rocketsingh.biker.widget.MyFontEdittextView
                        android:id="@+id/etRegisterFName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:background="@drawable/bg_edittext"
                        android:ems="10"
                        android:hint="@string/text_fname"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/color_text_dark" />

                    <com.rocketsingh.biker.widget.MyFontEdittextView
                        android:id="@+id/etRegisterLName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:background="@drawable/bg_edittext"
                        android:ems="10"
                        android:hint="@string/text_lname"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/color_text_dark" />

                    <com.rocketsingh.biker.widget.MyFontEdittextView
                        android:id="@+id/etRegisterEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:background="@drawable/bg_edittext"
                        android:ems="10"
                        android:hint="@string/text_email"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/color_text_dark" />

                    <com.rocketsingh.biker.widget.MyFontEdittextView
                        android:id="@+id/etRegisterPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:background="@drawable/bg_edittext"
                        android:ems="10"
                        android:hint="@string/text_passs"
                        android:inputType="textPassword"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/color_text_dark" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:orientation="horizontal" >

                        <com.rocketsingh.biker.widget.MyFontTextView
                            android:id="@+id/tvRegisterCountryCode"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.4"
                            android:background="@drawable/spinner_ab_default_holo_light"
                            android:gravity="center"
                            android:singleLine="true"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/color_text_dark" />

                        <com.rocketsingh.biker.widget.MyFontEdittextView
                            android:id="@+id/etRegisterNumber"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/bg_edittext"
                            android:ems="10"
                            android:hint="@string/text_number"
                            android:inputType="numberSigned"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:singleLine="true"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/color_text_dark" />
                    </LinearLayout>

                    <com.rocketsingh.biker.widget.MyFontEdittextView
                        android:id="@+id/etRegisterAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:background="@drawable/bg_edittext"
                        android:ems="10"
                        android:hint="@string/text_address"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/color_text_dark" />

                    <com.rocketsingh.biker.widget.MyFontEdittextView
                        android:id="@+id/etRegisterBio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:background="@drawable/bg_edittext"
                        android:ems="10"
                        android:hint="@string/text_bio"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/color_text_dark" />
                    
                    <com.rocketsingh.biker.widget.MyFontEdittextView
                        android:id="@+id/etRegisterZipCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:background="@drawable/bg_edittext"
                        android:ems="10"
                        android:hint="@string/text_zip"
                        android:inputType="number"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/color_text_dark" />

                    <com.rocketsingh.biker.widget.MyFontTextView
                        android:id="@+id/etRegistertimezone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:background="@drawable/spinner_ab_default_holo_light"
                        android:hint="@string/time_zone"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:visibility="gone"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/color_text_dark"
                        android:textColorHint="@color/light_gray" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <SlidingDrawer
            android:id="@+id/drawer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/gridview_height"
            android:layout_alignParentBottom="true"
            android:content="@+id/gvTypes"
            android:handle="@+id/btnSelectService"
            android:visibility="gone">

            <com.rocketsingh.biker.widget.MyFontButton
                android:id="@+id/btnSelectService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttontopcolor"
                android:text="@string/text_select_service"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/orange" />

            <GridView
                android:id="@+id/gvTypes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_select_service"
                android:columnWidth="100dp"
                android:gravity="center"
                android:horizontalSpacing="10dip"
                android:numColumns="2"
                android:stretchMode="spacingWidthUniform"
                android:verticalSpacing="10dip" />
        </SlidingDrawer>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llRegisterSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_alignParentBottom="true" >

        <com.rocketsingh.biker.widget.MyFontButton
            android:id="@+id/tvRegisterSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bottom"
            android:gravity="center"
            android:text="@string/text_register_caps"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>